# nsus_paper

./: README.md  pyproject.toml
examples/basic_usage/: pwl.py
examples/figures/: 3d_plot_nss_pwl.py  3d_plot_sus_pwl.py  kde.py  mix_contour.py  osc_displacement.py  partitioner.py  pwl_degen.py  two_dof_contour.py  utils.py
examples/numerical_examples/: direct_monete_carlo.py  experiment.py  print_experiments.py  utils.py
examples/numerical_examples/mix/: mix.py  mix_nss_exp.pkl  mix_nss_exp.py  mix_ref_prob.pkl  mix_ref_prob.py  mix_sus_exp.pkl  mix_sus_exp.py
examples/numerical_examples/osc/: osc.py  osc_nss_exp.pkl  osc_nss_exp.py  osc_ref_prob.pkl  osc_ref_prob.py  osc_sus_exp.pkl  osc_sus_exp.py
examples/numerical_examples/pwl/: high_pwl_nss_exp.pkl  high_pwl_nss_exp.py  high_pwl_sus_exp.pkl  high_pwl_sus_exp.py  pwl.py  pwl_nss_exp.pkl  pwl_nss_exp.py  pwl_ref_prob.pkl  pwl_ref_prob.py  pwl_sus_exp.pkl  pwl_sus_exp.py
examples/numerical_examples/two_dof/: two_dof.py  two_dof_nss_exp.pkl  two_dof_nss_exp.py  two_dof_ref_prob.pkl  two_dof_ref_prob.py  two_dof_sus_exp.pkl  two_dof_sus_exp.py
nsus/: allocate.py  bud_create.py  choose.py  estimate.py  hill_valley_graph_partitioner.py  implementation.py  indicator.py  level.py  level_create.py  lsvc.py  markov_chain.py  nsus.py  partition.py  performance_function.py  plot.py  scale.py  stop.py  utils.py
