[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'nsus'
version = '0.1.0'
requires-python = '>=3.12'
dependencies = [
  "anytree==2.12.1",
  "numpy==1.26.4",
  "scikit-learn==1.5.0",
  "scipy==1.13.1",
  "networkx==3.3",
  "matplotlib==3.9.0"
]

[project.optional-dependencies]
examples = [
    "seaborn==0.12.2",
    "tqdm==4.66.4",
    "pandas==2.2.2"
]

[tool.setuptools]
packages = ['nsus']